2013-07-11 Riccardo Mottola <rm@gnu.org>

	* fileTable.[h,m]
	Improve object remove methods regarding sorting array sync, factor sortedArray generation out.

2013-07-09 Riccardo Mottola <rm@gnu.org>

	* fileTable.[h,m]
	Object add and remove methods.

2013-06-27 Riccardo Mottola <rm@gnu.org>

	* GetNameController.h
	* GetNameController.m
        Handle return also in case of window closure through window button.

2013-06-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Actually create a new folder, local and remote.

2013-06-11 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	* ftpclient.h
	* AppController.m
	* AppController.h
	Change most method parameters from char* to NSString*.

2013-06-10 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Implement FTP rename RNFR RNTO

2013-06-09 Riccardo Mottola <rm@gnu.org>

	* GetNameController.h
	* GetNameController.m
	* AppController.m
        Rename setDescription to setMessage to avoid method clash

2013-06-07 Riccardo Mottola <rm@gnu.org>

	* GetNameController.m
	Load interface in init, not runAsModal

	* AppController.m
	Actually delete the file!

	* localclient.m
	Do not use working dir, but absolute path in the file element.

2013-06-07 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* GetNameController.h
	* GetNameController.m
	* GNUmakefile
	* Resources/GetName.gorm
	* Resources/FTP.gorm
	Local rename function.

2013-06-04 Riccardo Mottola <rm@gnu.org>

	* localclient.m
	Local rename function.

2013-06-04 Riccardo MOttola <rm@gnu.org>

	* client.h
	* client.m
	Renaming virtual method.

2013-06-01 Riccardo Mottola <rm@gnu.org>

	* AppController
	* localclient.m
	Fix memory leak.

2013-05-27 Riccardo Mottola <rm@gnu.org>

	* AppController.[h,m]
	Remove initialize.

2013-05-27 Riccardo Mottola <rm@gnu.org>

	* AppController.m (dropAction: paths:)
	Handle local file drop.

2013-05-22 Riccardo Mottola <rm@gnu.org>

	* AppController.m (performStoreFile)